UPDATE NEW LOGO
NEW LOGO PLUS THE CLUSTER

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>☭ III incendios records ☭</title>
 </head>
 
-<body>
+<body style="background-color:#ffdfdf">
   <table cellspacing="30">
     <tr>
-      <td><img src="images/III.jpeg" alt="LOGO sello discografico tres incendios temporales"></td>
+      <td><img src="images/III INCENDIOS LOGO NEW.jpg" alt="LOGO sello discografico tres incendios temporales" style="width:333px;height:333px"></td>
       <td>
         <h1>III incendios temporales</h1>
         <p><em><strong>Tres incendios temporales</strong> es un sello discográfico enfocado en la producción y difusión de
@@ -41,6 +41,13 @@
             </td>
             <td><a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
                 T H A L A S S I C</a></td>
+          </tr>
+          <tr>
+            <td>
+              <strong>The Cluster</strong>
+            </td>
+            <td><a href="https://tres-incendios-temporales.bandcamp.com/track/again">
+                Again</a></td>
           </tr>
           <tr>
             <td>
