EXTERNAL CSS STYLING
New Colors and general styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>☭ III incendios records ☭</title>
+  
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
-<body style="background-color:#ffdfdf">
+<body>
   <table cellspacing="30">
     <tr>
       <td><img src="images/III INCENDIOS LOGO NEW.jpg" alt="LOGO sello discografico tres incendios temporales" style="width:333px;height:333px"></td>
@@ -27,7 +29,9 @@
   <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
   <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
   <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
-  <hr size="3" color="gray">
+
+  <hr>
+
   <h3>Bandas y artistas</h3>
 
   <table>
@@ -96,6 +100,7 @@
   </table>
 
   <br>
+
   <hr>
   <h3>Transgrediendo lo establecido en:</h3>
   <ol>
@@ -105,7 +110,7 @@
     <li>Networking</li>
     <li>Film</li>
   </ol>
-  <hr size="3" color="gray">
+  <hr>
   <a href="info.html">contáctenos</a>
 
 </html>
