--- a/info.html
+++ b/info.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>our info</title>
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <h3>llámenos</h3>
