--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>☭ III incendios records ☭</title>
-  
+
   <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="images/III INCENDIOS LOGO NEW.jpg" alt="LOGO sello discografico tres incendios temporales" style="width:333px;height:333px"></td>
+      <td><img class="SQUAREimg" src="images/III INCENDIOS LOGO NEW.jpg" alt="LOGO sello discografico tres incendios temporales" style="width:333px;height:333px"></td>
       <td>
-        <h1>III incendios temporales</h1>
-        <p><em><strong>Tres incendios temporales</strong> es un sello discográfico enfocado en la producción y difusión de
+        <!--<img class="coverimg" src="images/III INCENDIOS PORTADA.jpg" alt="HEADER">-->
+        <h1 id="encabezado">III INCENDIOS RECORDS</h1>
+        <br>
+        <hr
+        class="headhr">
+        <p><em><strong>Tres Incendios Records</strong> es un sello discográfico enfocado en la producción y difusión de
             bandas alternativas emergentes.</em> </p>
         <p>Formado en 2017 por Desasociado y Niebla Páramo como primera plataforma para difundir sus proyectos musicales:
           Sombras y Sadkó fueron las primeras bandas producidas por el sello y las que abrieron el camino para patrocinar más proyectos luego. El sello Tres incendios temporales ha participado en la organización directa o inderecta de diversos
@@ -102,6 +106,7 @@
   <br>
 
   <hr>
+  <!--
   <h3>Transgrediendo lo establecido en:</h3>
   <ol>
     <li>Producción musical</li>
@@ -111,6 +116,7 @@
     <li>Film</li>
   </ol>
   <hr>
+  -->
   <a href="info.html">contáctenos</a>
 
 </html>
