NEW LOGO, in line block for header
div tag for header

--- a/index.html
+++ b/index.html
@@ -3,40 +3,34 @@
 
 <head>
   <meta charset="utf-8">
-  <title>☭ III incendios records ☭</title>
+  <title>III Incendios Records</title>
 
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="icon" href="TRES LOGO.ico">
+
 </head>
 
 <body>
-  <table cellspacing="30">
-    <tr>
-      <td><img class="SQUAREimg" src="images/III INCENDIOS LOGO NEW.jpg" alt="LOGO sello discografico tres incendios temporales" style="width:333px;height:333px"></td>
-      <td>
-        <!--<img class="coverimg" src="images/III INCENDIOS PORTADA.jpg" alt="HEADER">-->
-        <h1 id="encabezado">III INCENDIOS RECORDS</h1>
-        <br>
-        <hr
-        class="headhr">
-        <p><em><strong>Tres Incendios Records</strong> es un sello discográfico enfocado en la producción y difusión de
-            bandas alternativas emergentes.</em> </p>
-        <p>Formado en 2017 por Desasociado y Niebla Páramo como primera plataforma para difundir sus proyectos musicales:
-          Sombras y Sadkó fueron las primeras bandas producidas por el sello y las que abrieron el camino para patrocinar más proyectos luego. El sello Tres incendios temporales ha participado en la organización directa o inderecta de diversos
-          eventos en la escena Underground bogotana desde entonces, entre los cuales destaca el lanzamiento del primer LP de Sombras, las diferentes versiones del festival ANSIA (post punk y melodías oscuras) y feria-tokes con el ánimo de apoyar las
-          bandas locales y las marcas de diseño independientes de la ciudad.</p>
-      </td>
-    </tr>
-  </table>
-
-
-  <br>
+  <div class="headimg">
+    <img class="logoimg" src="images/III INCENDIOS LOGO NEW.jpg" alt="LOGO sello discografico tres incendios temporales" style="width:300px;height:300px"></td>
+  </div>
+  <!--<img class="coverimg" src="images/III INCENDIOS PORTADA.jpg" alt="HEADER">-->
+  <div class="topcontainer">
+    <h1><strong>TRES INCENDIOS RECORDS</strong></h1>
+    <p><em>Sello discográfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></p>
+  </div>
   <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
+  <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
   <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
   <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
 
-  <hr>
+  <hr class="headhr">
 
+  <br>
+
+  <br>
   <h3>Bandas y artistas</h3>
+
 
   <table>
     <tr>
@@ -117,6 +111,12 @@
   </ol>
   <hr>
   -->
-  <a href="info.html">contáctenos</a>
+  <p>En 2017 Niebla Páramo y Desasociado formaron <strong>T I R</strong> como primera plataforma para difundir sus proyectos musicales:
+    Sombras y Sadkó fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos luego. El sello Tres incendios temporales ha participado en la organización directa o inderecta de diversos
+    eventos en la escena Underground bogotana desde entonces, entre los cuales destacan <, las diferentes versiones del festival ANSIA (post punk y melodías oscuras) y feria-tokes con el ánimo de apoyar las bandas locales y las marcas de diseño
+      independientes de la ciudad.</p>
+
+
+      <a href="info.html">contáctenos</a>
 
 </html>
