--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
 
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" href="TRES LOGO.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-  <div class="headimg">
-    <img class="logoimg" src="images/III INCENDIOS LOGO NEW.jpg" alt="LOGO sello discografico tres incendios temporales" style="width:300px;height:300px"></td>
-  </div>
-  <!--<img class="coverimg" src="images/III INCENDIOS PORTADA.jpg" alt="HEADER">-->
   <div class="topcontainer">
+    <img class="top2017" src="images/2017.png" alt="2017">
     <h1><strong>TRES INCENDIOS RECORDS</strong></h1>
-    <p><em>Sello discográfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></p>
+      <p><em>Sello discográfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></p>
+    <img class="bottom2017" src="images/2017.png" alt="2017">
+<br>
+    <img src="images/matchbox.png" alt="cajadefosfores"width="400px">
+
+
+
+
   </div>
+  <br />
   <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
   <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
   <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
