NUEVO ESTILO CSS
centered containers

--- a/index.html
+++ b/index.html
@@ -15,97 +15,123 @@
   <div class="topcontainer">
     <img class="top2017" src="images/2017.png" alt="2017">
     <h1><strong>TRES INCENDIOS RECORDS</strong></h1>
-      <p><em>Sello discográfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></p>
+    <p><em>Sello discográfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></p>
     <img class="bottom2017" src="images/2017.png" alt="2017">
-<br>
-    <img src="images/matchbox.png" alt="cajadefosfores"width="400px">
-
-
-
+    <br>
+    <img src="images/matchbox.png" alt="cajadefosfores" width="400px">
 
   </div>
-  <br />
-  <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
-  <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
-  <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
-  <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
+  <div class="middle-container">
+    <div class="bands">
+      <img src="images/3matches.png" alt="fosofores">
+      <h2>BANDAS Y ARTISTAS</h2>
+      <p>
+        <table>
+          <tr>
+            <td>
+              <table class="tabla1" cellspacing="7">
+
+                <tr>
+                  <td>
+                    <strong>Audiocancer</strong>
+                  </td>
+                  <td><a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
+                      T H A L A S S I C</a></td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>The Cluster</strong>
+                  </td>
+                  <td><a href="https://tres-incendios-temporales.bandcamp.com/track/again">
+                      Again</a></td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Dimitri Novikov</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>goldenrod</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+            <td>
+              <table cellspacing="7">
+                <tr>
+                  <td>
+                    <strong>SADKÓ</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/celeste-altamar">Celeste / Altamar</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Secretismo</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Sombras</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
+                  </td>
+                </tr>
+              </table>
+
+            </td>
+          </tr>
+
+        </table>
+      </p>
+    </div>
+    <hr>
+
+    <div class="nosotros">
+      <h2>NOSOTROS</h2>
+      <div class="historia-row">
+        <img class="" src="" alt="">
+        <h3>La historia</h3>
+        <p>En 2017 Niebla Páramo y Desasociado formaron <strong>T I R</strong> como primera plataforma para difundir sus proyectos musicales:
+          Sombras y Sadkó fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos luego. El sello Tres incendios temporales ha participado en la organización directa o inderecta de diversos
+          eventos en la escena Underground bogotana desde entonces, entre los que se destacan las diferentes versiones del festival ANSIA (post punk y melodías oscuras) y feria-tokes con el ánimo de apoyar las bandas locales y las marcas de diseño
+          independientes de la ciudad.</p>
+      </div>
+      <img class="" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk" width="150px">
+      <div class="mision-row">
+
+        <h3>La misión</h3>
+        <p>III Incendios como plataforma artistica multidimensional</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>CONTÁCTENOS</h2>
+    <h3><a href="info.html">OUR INFO</a></h3>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
+    <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
+    <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
+    <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
 
   <hr class="headhr">
 
-  <br>
+    <p>© 2020 Tres Incendios Records</p>
+  </div>
 
-  <br>
-  <h3>Bandas y artistas</h3>
+  <!--HIPSUM HIPSUM-->
 
-
-  <table>
-    <tr>
-      <td>
-        <table cellspacing="7">
-
-          <tr>
-            <td>
-              <strong>Audiocancer</strong>
-            </td>
-            <td><a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
-                T H A L A S S I C</a></td>
-          </tr>
-          <tr>
-            <td>
-              <strong>The Cluster</strong>
-            </td>
-            <td><a href="https://tres-incendios-temporales.bandcamp.com/track/again">
-                Again</a></td>
-          </tr>
-          <tr>
-            <td>
-              <strong>Dimitri Novikov</strong>
-            </td>
-            <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>goldenrod</strong>
-            </td>
-            <td> <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
-            </td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="7">
-          <tr>
-            <td>
-              <strong>SADKÓ</strong>
-            </td>
-            <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/celeste-altamar">Celeste / Altamar</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>Secretismo</strong>
-            </td>
-            <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>Sombras</strong>
-            </td>
-            <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
-            </td>
-          </tr>
-        </table>
-
-      </td>
-    </tr>
-
-  </table>
-
-  <br>
-
-  <hr>
   <!--
   <h3>Transgrediendo lo establecido en:</h3>
   <ol>
@@ -117,12 +143,8 @@
   </ol>
   <hr>
   -->
-  <p>En 2017 Niebla Páramo y Desasociado formaron <strong>T I R</strong> como primera plataforma para difundir sus proyectos musicales:
-    Sombras y Sadkó fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos luego. El sello Tres incendios temporales ha participado en la organización directa o inderecta de diversos
-    eventos en la escena Underground bogotana desde entonces, entre los cuales destacan <, las diferentes versiones del festival ANSIA (post punk y melodías oscuras) y feria-tokes con el ánimo de apoyar las bandas locales y las marcas de diseño
-      independientes de la ciudad.</p>
 
 
-      <a href="info.html">contáctenos</a>
+
 
 </html>
