--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
-    <h3>llámenos</h3>
+    <h3>Llámenos</h3>
     <p>
       Niebla Páramo
       <br>
@@ -22,7 +22,7 @@
       <a href="tel:+17209909506">+1 720 9909506</a>
     </p>
     <hr>
-    <h3>escríbanos</h3>
+    <h3>Escríbanos</h3>
     <form class="" action="mailto:kaunasaturdid@gmail.com" method="post" enctype="text/plain">
       <label>Su nombre</label> <br>
       <input type="text" name="Nombre" value="">
@@ -32,6 +32,7 @@
       <br>
       <label>Su mensaje</label><br>
     <textarea name="Mensaje" rows="10" cols="20"></textarea>
+    <br>
       <input type="submit">
 
 
