TOP PADDING FOSFOROS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
   <div class="middle-container">
     <div class="bands">
-      <img src="images/3matches.png" alt="fosofores">
+      <img class="fosoforospng" src="images/3matches.png" alt="fosofores">
       <h2>BANDAS Y ARTISTAS</h2>
       <p>
         <table>
