--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="topcontainer">
     <img class="top2017" src="images/2017.png" alt="2017">
     <h1><strong>TRES INCENDIOS RECORDS</strong></h1>
-    <p><em>Sello discográfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></p>
+    <h4><em>Sello disco-gráfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></h4>
     <img class="bottom2017" src="images/2017.png" alt="2017">
     <br>
     <img src="images/matchbox.png" alt="cajadefosfores" width="400px">
@@ -99,36 +99,41 @@
       <div class="historia-row">
         <img class="" src="" alt="">
         <h3>La historia</h3>
-        <p>En 2017 Niebla Páramo y Desasociado formaron <strong>T I R</strong> como primera plataforma para difundir sus proyectos musicales:
-          Sombras y Sadkó fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos luego. El sello Tres incendios temporales ha participado en la organización directa o inderecta de diversos
-          eventos en la escena Underground bogotana desde entonces, entre los que se destacan las diferentes versiones del festival ANSIA (post punk y melodías oscuras) y feria-tokes con el ánimo de apoyar las bandas locales y las marcas de diseño
-          independientes de la ciudad.</p>
+        <div class="bio">
+          <p>En 2017 Niebla Páramo y Desasociado formaron <strong>T I R</strong> como primera plataforma para difundir sus proyectos musicales:
+            <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos luego.</p>
+            <br>
+            <p>
+              Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
+               en la escena Underground bogotana desde entonces, con el ánimo de apoyar las bandas locales y las
+                marcas de diseño independientes de la ciudad.
+              </p>
+        </div>
+
       </div>
       <img class="" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk" width="150px">
       <div class="mision-row">
 
         <h3>La misión</h3>
-        <p>III Incendios como plataforma artistica multidimensional</p>
+        <p>III Incendios como plataforma artística multidimensional</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>CONTÁCTENOS</h2>
-    <h3><a href="info.html">OUR INFO</a></h3>
+      <h3><a href="info.html">OUR INFO</a></h3>
+    </div>
+    <div class="bottom-container">
+      <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
+      <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
+      <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
+      <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
+      <p>© 2020 Tres Incendios Records</p>
     </div>
   </div>
 
 
-  <div class="bottom-container">
-    <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
-    <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
-    <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
-    <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
 
-  <hr class="headhr">
-
-    <p>© 2020 Tres Incendios Records</p>
-  </div>
 
   <!--HIPSUM HIPSUM-->
 
