--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="topcontainer">
     <img class="top2017" src="images/2017.png" alt="2017">
     <h1><strong>TRES INCENDIOS RECORDS</strong></h1>
-    <h4><em>Sello disco-gráfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></h4>
+    <h4 class="description"><em>Sello disco-gráfico enfocado en la producción y difusión de bandas alternativas emergentes.</em></h4>
     <img class="bottom2017" src="images/2017.png" alt="2017">
     <br>
     <img src="images/matchbox.png" alt="cajadefosfores" width="400px">
@@ -115,7 +115,7 @@
       <div class="mision-row">
 
         <h3>La misión</h3>
-        <p>III Incendios como plataforma artística multidimensional</p>
+        <p>III Incendios como plataforma creativa multidimensional</p>
       </div>
     </div>
     <hr>
