--- a/index.html
+++ b/index.html
@@ -101,19 +101,18 @@
       <div class="us-row">
         <div class="bio">
           <h3>La historia</h3>
-          <img class="historiaimg" src="images/drums.png" alt="drum">
-          <p>En 2017 Niebla Páramo y Desasociado formaron <strong>T-I-R</strong> como primera plataforma para difundir sus proyectos musicales:
+          <img class="historiaimg" src="images/sombras.png" alt="sombras">
+          <p>En 2017 Niebla Páramo y Desasociado formaron <bold>TIR</bold> como primera plataforma para difundir sus proyectos musicales:
             <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
             luego.</p>
-
-          <p>
+            <p>
             Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
-            en la escena Underground bogotana desde entonces, con el ánimo de apoyar las bandas locales y las
+            en la escena Underground bogotana desde entonces con el ánimo de apoyar las bandas locales y las
             marcas de diseño independientes de la ciudad.
           </p>
 
           <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
-            <h3>La misión</h3>
+          <h3>La misión</h3>
           <p>III Incendios como plataforma creativa multidimensional</p>
         </div>
 
