--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="us-row">
         <div class="bio">
           <h3>La historia</h3>
-          <img class="historiaimg" src="images/sombras.png" alt="sombras">
+          <!--<img class="historiaimg" src="images/sombras.png" alt="sombras">-->
           <p>En 2017 Niebla Páramo y Desasociado formaron <bold>TIR</bold> como primera plataforma para difundir sus proyectos musicales:
             <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
             luego.</p>
