--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
 </head>
 
-<body>
+<body class="body">
   <div class="topcontainer">
     <img class="top2017" src="images/2017.png" alt="2017">
     <h1><strong>TRES INCENDIOS RECORDS</strong></h1>
-    <h4 class="description"><em>Producción y difusión de bandas alternativas emergentes.</em></h4>
+    <h2 class="description"><em>Producción y difusión de bandas alternativas emergentes.</em></h2>
     <img class="bottom2017" src="images/2017.png" alt="2017">
     <br>
     <img class="matchbox" src="images/matchbox.png" alt="cajadefosfores">
 
   </div>
+
   <div class="middle-container">
     <div class="bands">
       <img class="fosoforospng" src="images/3matches.png" alt="fosofores">
@@ -91,45 +92,53 @@
 
         </table>
       </p>
-    </div>
-    <br>
-    <br>
-    <hr>
-
-    <div class="nosotros">
-      <h2>NOSOTROS</h2>
-      <div class="us-row">
-        <div class="bio">
-          <h3>La historia</h3>
-          <p>En 2017 Niebla Páramo y Desasociado formaron <bold>TIR</bold> como primera plataforma para difundir sus proyectos musicales:
-            <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
-            luego.</p>
+      <br>
+      <br>
+      <hr>
+      <div class="nosotros">
+        <h2>NOSOTROS</h2>
+        <div class="us-row">
+          <div class="bio">
+            <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
+            <h3>La historia</h3>
+            <p>En 2017 Niebla Páramo y Desasociado formaron <bold>TIR</bold> como primera plataforma para difundir sus proyectos musicales:
+              <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
+              luego.</p>
             <p>
-            Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
-            en la escena Underground bogotana desde entonces con el ánimo de apoyar las bandas locales y las
-            marcas de diseño independientes de la ciudad.
-          </p>
-<br>
-<br>
-          <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
-          <h3>La misión</h3>
-          <p>III Incendios como plataforma creativa multidimensional</p>
+              Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
+              en la escena Underground bogotana desde entonces con el ánimo de apoyar las bandas locales y las
+              marcas de diseño independientes de la ciudad.
+            </p>
+            <br>
+            <br>
+            <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
+            <h3>La misión</h3>
+            <p>III Incendios como plataforma creativa multidimensional</p>
+          </div>
         </div>
+        <div class="contact-me">
+          <h2>CONECTEMOS</h2>
 
+          <h3><a href="info.html" class="INFO">OUR INFO</a></h3>
+          <br>
+          <br>
+        </div>
       </div>
     </div>
-    <hr>
-    <div class="contact-me">
-      <h2>CONTÁCTENOS</h2>
-      <h3><a href="info.html">OUR INFO</a></h3>
-      <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
-      <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
-      <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
-      <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
-    </div>
     <div class="bottom-container">
-      <p class="copyriht">© 2020 Tres Incendios Records</p>
+
+      <br>
+      <div>
+        <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
+        <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
+        <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
+        <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
+        <p class="copyriht">© 2020 Tres Incendios Records</p>
+
+      </div>
+
     </div>
+  </div>
   </div>
 
 
