--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
       <br>
       <a href="tel:+17209909506">+1 720 9909506</a>
     </p>
-    <hr>
+    <hr class="infohr">
     <h3>Escríbanos</h3>
     <form class="" action="mailto:kaunasaturdid@gmail.com" method="post" enctype="text/plain">
       <label>Su nombre</label> <br>
