--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <td>
                     <strong>SADKÓ</strong>
                   </td>
-                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/celeste-altamar">Celeste / Altamar</a>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">Transiberiano (Транссибирский)</a>
                   </td>
                 </tr>
                 <tr>
