--- a/info.html
+++ b/info.html
@@ -6,37 +6,41 @@
     <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
-    <h3>Llámenos</h3>
-    <p>
-      Niebla Páramo
-      <br>
-      <em>representante/productora</em>
-      <br>
-    <a href="tel:+573172415070">+57 317 2415070</a>
-<br>
-<br>
-      Desasociado
-      <br>
-      <em>productor</em>
-      <br>
-      <a href="tel:+17209909506">+1 720 9909506</a>
-    </p>
+    <div class="llamenos">
+      <h3>Llámenos</h3>
+      <p>
+        Niebla Páramo
+        <br>
+        <em>representante/productora</em>
+        <br>
+      <a href="tel:+573172415070">+57 317 2415070</a>
+  <br>
+  <br>
+        Desasociado
+        <br>
+        <em>productor</em>
+        <br>
+        <a href="tel:+17209909506">+1 720 9909506</a>
+      </p>
+    </div>
     <hr class="infohr">
-    <h3>Escríbanos</h3>
-    <form class="" action="mailto:kaunasaturdid@gmail.com" method="post" enctype="text/plain">
-      <label>Su nombre</label> <br>
-      <input type="text" name="Nombre" value="">
+    
+    <div class="escribanos">
+      <h3>Escríbanos</h3>
+      <form class="" action="mailto:kaunasaturdid@gmail.com" method="post" enctype="text/plain">
+        <label>Su nombre</label> <br>
+        <input type="text" name="Nombre" value="">
+        <br>
+        <label> Su correo electrónico</label><br>
+        <input type="email"= name="Email">
+        <br>
+        <label>Su mensaje</label><br>
+      <textarea name="Mensaje" rows="10" cols="20"></textarea>
       <br>
-      <label> Su correo electrónico</label><br>
-      <input type="email"= name="Email">
-      <br>
-      <label>Su mensaje</label><br>
-    <textarea name="Mensaje" rows="10" cols="20"></textarea>
-    <br>
-      <input type="submit">
+        <input type="submit">
+      </form>
+    </div>
 
-
-    </form>
 
   </body>
 </html>
