--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="">Bandas y Artistas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">La historia</a>
+            <a class="nav-link" href="">Nosotros</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Conectemos</a>
