--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
 <head>
 
   <meta charset="utf-8">
-  <title>III Incendios Records</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" href="TRES LOGO.ico">
+
+  <title>III Incendios Records</title>
+  <!-- BOOTSTRAP -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- MY CSS -->
+  <link rel="stylesheet" href="CSS/style.css">
+  <!-- FONTAWESOME -->
+  <script src="https://kit.fontawesome.com/70d98cf736.js" crossorigin="anonymous"></script>
+  <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
+  <!-- BOOTSTRAP JAVASCRIPT -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </head>
 
 
-<body class="body">
+<body>
+  <!-- CONTAINER 1 -->
   <div class="containter-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="">T R E S  -  I N C E N D I O S  -  R E C O R D S</a>
+    <!-- BARRA DE NAVEGACIÓN -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
+
+      <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="">Bandas y Artistas</a>
@@ -34,167 +47,186 @@
             <a class="nav-link" href="">Conectemos</a>
           </li>
         </ul>
+
+
       </div>
     </nav>
 
 
+    <!-- TÍTULO -->
+
+
 
     <div class="topcontainer row">
-      <div class="col-lg-6 col-md-12">
-        <h2 class="description">Producción y difusión de bandas alternativas emergentes.</h2>
+      <div class="description col-lg-6 col-md-12">
+        <h1>Producción y difusión de bandas alternativas emergentes.</h1>
+        <br>
+
+        <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
+
       </div>
-      <div class="col-lg-6">
-        <img class="matchbox" src="images/matchbox.png" alt="cajadefosfores">
+      <div class="col-lg-6" style="padding:0;">
+        <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
       </div>
     </div>
   </div>
 
+  <!-- BANDAS Y ARTISTAS -->
 
-    <div class="middle-container">
-      <div class="bands">
-        <img class="fosoforospng" src="images/3matches.png" alt="fosofores">
-        <h2>BANDAS Y ARTISTAS</h2>
-        <p>
-          <table>
-            <tr>
-              <td>
-                <table class="tabla1" cellspacing="7">
 
-                  <tr>
-                    <td>
-                      <strong>Audiocancer</strong>
-                    </td>
-                    <td><a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
-                        T H A L A S S I C</a></td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <strong>The Cluster</strong>
-                    </td>
-                    <td><a href="https://tres-incendios-temporales.bandcamp.com/track/again">
-                        Again</a></td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <strong>Dimitri Novikov</strong>
-                    </td>
-                    <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <strong>goldenrod</strong>
-                    </td>
-                    <td> <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-              <td>
-                <table cellspacing="7">
-                  <tr>
-                    <td>
-                      <strong>SADKÓ</strong>
-                    </td>
-                    <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">Transiberiano (Транссибирский)</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <strong>Secretismo</strong>
-                    </td>
-                    <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <strong>Sombras</strong>
-                    </td>
-                    <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
-                    </td>
-                  </tr>
-                </table>
+  <div class="middle-container">
+    <div class="bands">
+      <img class="fosoforospng" src="images/FOSFOROTRES.png" alt="fosofores">
+      <h2>BANDAS Y ARTISTAS</h2>
+      <p>
+        <table>
+          <tr>
+            <td>
+              <table class="tabla1" cellspacing="7">
 
-              </td>
-            </tr>
+                <tr>
+                  <td>
+                    <strong>Audiocancer</strong>
+                  </td>
+                  <td><a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
+                      T H A L A S S I C</a></td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>The Cluster</strong>
+                  </td>
+                  <td><a href="https://tres-incendios-temporales.bandcamp.com/track/again">
+                      Again</a></td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Dimitri Novikov</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>goldenrod</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+            <td>
+              <table cellspacing="7">
+                <tr>
+                  <td>
+                    <strong>SADKÓ</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">Transiberiano (Транссибирский)</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Secretismo</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Sombras</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
+                  </td>
+                </tr>
+              </table>
 
-          </table>
-        </p>
-        <br>
+            </td>
+          </tr>
+
+        </table>
+      </p>
+      <br>
+
+      <hr>
+
+
+      <!-- NOSOTROS -->
+
+
+      <div class="nosotros">
+        <h2>NOSOTROS</h2>
+        <div class="us-row">
+          <div class="bio">
+            <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
+            <h3>La historia</h3>
+            <p>En 2017 Niebla Páramo y Desasociado formaron <bold>T I R</bold> como primera plataforma para difundir sus proyectos musicales:
+              <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
+              luego.</p>
+            <p>
+              Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
+              en la escena Underground bogotana desde entonces con el ánimo de apoyar las bandas locales y las
+              marcas de diseño independientes de la ciudad.
+            </p>
+            <br>
+            <br>
+            <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
+            <h3>La misión</h3>
+            <p>III Incendios como plataforma creativa multidimensional</p>
+          </div>
+        </div>
+
+
         <br>
         <hr>
 
+        <!-- CONTACTO -->
 
 
-        <div class="nosotros">
-          <h2>NOSOTROS</h2>
-          <div class="us-row">
-            <div class="bio">
-              <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
-              <h3>La historia</h3>
-              <p>En 2017 Niebla Páramo y Desasociado formaron <bold>T I R</bold> como primera plataforma para difundir sus proyectos musicales:
-                <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más                proyectos
-                luego.</p>
-              <p>
-                Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
-                en la escena Underground bogotana desde entonces con el ánimo de apoyar las bandas locales y las
-                marcas de diseño independientes de la ciudad.
-              </p>
-              <br>
-              <br>
-              <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
-              <h3>La misión</h3>
-              <p>III Incendios como plataforma creativa multidimensional</p>
-            </div>
-          </div>
+        <div class="contact-me">
+          <br>
+          <h2>CONECTEMOS</h2>
+
+
+          <button type="button" class=" btn-outline-light btn btn-link btn-sm"><a href="info.html" class="INFO">OUR INFO</a></button>
 
 
           <br>
-          <hr>
-
-          <div class="contact-me">
-            <br>
-            <h2>CONECTEMOS</h2>
-
-
-            <button type="button" class=" btn-light btn btn-link btn-sm"><a href="info.html" class="INFO">OUR INFO</a></button>
-
-
-            <br>
-            <br>
-          </div>
-
-
-
+          <br>
         </div>
-      </div>
 
 
-
-
-      <div class="bottom-container">
-
-        <br>
-        <div>
-          <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
-          <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
-          <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
-          <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
-          <p class="copyriht">© 2020 Tres Incendios Records</p>
-
-        </div>
 
       </div>
     </div>
+
+
+    <!-- REDES -->
+
+
+    <div class="bottom-container">
+
+      <br>
+      <div>
+        <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
+        <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
+        <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
+        <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
+        <p class="copyriht">© 2020 Tres Incendios Records</p>
+
+      </div>
+
+    </div>
   </div>
+  </div>
+
 
 
 
   <!--HIPSUM HIPSUM-->
 
   <!--
-  <h3>Transgrediendo lo establecido en:</h3>
+  <h3>TransgrediR lo establecido en:</h3>
   <ol>
+  RADIO
     <li>Producción musical</li>
     <li>Sonido en vivo</li>
     <li>Promoción de eventos</li>
