Singles Vol. 1 Trivmvirs

--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
     <div class="bands">
       <img class="fosoforospng" src="images/FOSFOROTRES.png" alt="fosofores">
       <h2>BANDAS Y ARTISTAS</h2>
+      <br>
       <p>
         <table>
           <tr>
             <td>
-              <table class="tabla1" cellspacing="7">
+              <table class="tabla1" cellspacing="14.1">
 
                 <tr>
                   <td>
@@ -135,6 +136,13 @@
                     <strong>Sombras</strong>
                   </td>
                   <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Trivmvirs</strong>
+                  </td>
+                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Singles Vol. 1</a>
                   </td>
                 </tr>
               </table>
